objects/User.object
<CustomObject>
    <fields>
        <fullName>AH_Employee_ID__c</fullName>
        <label>AH Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_Name__c</fullName>
        <label>AH Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_RC_Code__c</fullName>
        <label>AH RC Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acting_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acting Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_Name__c</fullName>
        <label>Area Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Executive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_Employee_ID__c</fullName>
        <label>NH Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_Name__c</fullName>
        <label>NH Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_RC_Code__c</fullName>
        <label>NH RC Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Name__c</fullName>
        <label>Network Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_Code__c</fullName>
        <label>RC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is updated by DIH (HRIS): A = Active, I=Inactive</description>
        <label>Status Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Employee_ID__c</fullName>
        <label>TM Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Name__c</fullName>
        <label>TM Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <label>Team Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_ah__c</fullName>
        <label>Current AH</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>RC_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Can_Edit_User_Record</fullName>
        <active>true</active>
        <description>Check to see whether user can edit user record</description>
        <errorConditionFormula>OR( 
ISCHANGED( FirstName ), 
ISCHANGED( LastName  ), 
ISCHANGED(  Email  ), 
ISCHANGED(  Username  ), 
ISCHANGED(  Alias  )) &amp;&amp;
$Setup.User_Management__c.Allow_User_Edit__c = FALSE</errorConditionFormula>
        <errorMessage>You have no authorized to edit First Name, Last Name, Email, UserName, Alias</errorMessage>
    </validationRules>
</CustomObject>